Fix incomplete switch statement in CSSParser after r118082 https://bugs.webkit.org/show_bug.cgi?id=87250

Reviewed by Alexis Menard.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseValue):


Canonical link: https://commits.webkit.org/104978@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118167 268f45cc-cd09-0410-ab3c-d52691b4dbfc